                           WWIV 5.0 What's New List
                 Copyright 1999-2014 WWIV Software Services
==============================================================================

What's New in 2014
~~~~~~~~~~~~~~~~~~
* Many more things work.
* Init is open sourced
* Full self-bootstrapping support. No longer need 4.30 installed first.


What's New in Beta-2
~~~~~~~~~~~~~~~~~~~~~
* Archver commands now work.
* F1 User Editor Improvements
* PuTTY now works with auto-detect line mode
* WFC now clears the screen in places it forgot to.
* Fixed Pending Network display glitches
* Changed Message Scan Prompt to 1 line from 2.
* Added Litebar calls in Your Info and Voting Booth for 
  a more common look and feel.
* Fixed missing mutex in telnet handling code.
* 2004 Copyright
* Misc internal code cleanups.


What's New in Beta-1
~~~~~~~~~~~~~~~~~~~~
* File compatable with 4.30/4.31
* 32-bit Win32 version.
* Compiles and Runs on Linux.
* Included GUI Telnet Server.
* Internal ZModem
* DOOR32.SYS support.
* Uses the SyncFoss code from Synchronet (thanks to Rob Swindell for helping
  get this to work)  "Emulate Win32 FOSSIL" enables this.
* Added commandline option -k (pacK message areas) to wwiv50.  This 
  will pack all message areas unless you specify the number of the
  areas to pack on the commandline. i.e. "wwiv50 -k 1 5 10" would
  pack areas 1, 5 and 10. (Build46)
* If you add "NEW_SCAN_AT_LOGIN=Y" to WWIV.INI, then when a user logs 
  in they will be asked to scan all message areas for new messages. (Build46)
* The display while packing message bases is now a bit nicer looking.
* Changed filename global.txt to global-<node number>.txt (Build43)
* Added control-U for who's online hotkey. (Build40)
* Fixed laston edge case where the header didn't match the data when
  EXTENDED_USERINFO = N but SHOW_CITY_ST = Y. (Build40)
* FOSSIL can now be specified in WWIV.INI as a valid flag for spawn 
  options (Build37)
* Added 2 new pipe codes: